--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@
 description = "Tabsdata is a publish-subscribe (pub/sub) server for tables."
 name = "tabsdata"
 edition = "2024"
-version = "1.5.0"
+version = "1.4.0"
 license = "Apache 2.0"
 build = "build.rs"
 
@@ -25,8 +25,8 @@ license = "Apache 2.0"
 publish = false
 readme = "README.md"
 repository = "https://github.com/tabsdata/tabsdata"
-rust-version = "1.89.0"
-version = "1.5.0"
+rust-version = "1.90.0"
+version = "1.4.0"
 
 [workspace]
 members = [
@@ -373,6 +373,9 @@ version = "1.3.1"
 [workspace.dependencies.humantime]
 version = "2.3.0"
 
+[workspace.dependencies.iana-time-zone]
+version = "0.1.61"
+
 [workspace.dependencies.ignore]
 version = "0.4.23"
 
@@ -397,6 +400,9 @@ version = "0.3.0"
 
 [workspace.dependencies.libc]
 version = "0.2.175"
+
+[workspace.dependencies.netstat2]
+version = "0.11.2"
 
 [workspace.dependencies.nix]
 version = "0.30.1"
@@ -582,6 +588,10 @@ features = ["serde"]
 [workspace.dependencies.uuid]
 version = "1.18.1"
 features = ["v7"]
+
+[workspace.dependencies.vergen-gix]
+version = "1.0.2"
+features = ["build", "cargo", "rustc", "si"]
 
 [workspace.dependencies.walkdir]
 version = "2.5.0"
