--- a/Cargo.toml
+++ b/Cargo.toml
@@ -256,7 +256,7 @@ path = "extensions/rust/te-execution"
 # External dependencies
 
 [workspace.dependencies.anyhow]
-version = "1.0.99"
+version = "1.0.100"
 
 [workspace.dependencies.aquamarine]
 version = "0.6.0"
@@ -272,13 +272,13 @@ version = "0.1.89"
 version = "0.3.0"
 
 [workspace.dependencies.axum]
-version = "0.8.4"
+version = "0.8.6"
 
 [workspace.dependencies.axum-embed]
 version = "0.1.0"
 
 [workspace.dependencies.axum-extra]
-version = "0.10.1"
+version = "0.10.3"
 
 [workspace.dependencies.axum-server]
 version = "0.7.2"
@@ -290,11 +290,11 @@ version = "0.22.1"
 version = "1.10.1"
 
 [workspace.dependencies.clap]
-version = "4.5.47"
+version = "4.5.50"
 features = ["derive"]
 
 [workspace.dependencies.clap_derive]
-version = "4.5.47"
+version = "4.5.49"
 
 [workspace.dependencies.chrono]
 version = "0.4.42"
@@ -303,7 +303,7 @@ version = "0.4.42"
 version = "3.0.0"
 
 [workspace.dependencies.config]
-version = "0.15.16"
+version = "0.15.18"
 features = ["yaml"]
 
 [workspace.dependencies.console]
@@ -323,7 +323,7 @@ version = "0.4.1"
 version = "0.6.1"
 
 [workspace.dependencies.const_format]
-version = "0.2.34"
+version = "0.2.35"
 
 [workspace.dependencies.data-encoding]
 version = "2.9.0"
@@ -359,7 +359,7 @@ version = "0.1.6"
 version = "0.3.3"
 
 [workspace.dependencies.graphviz-rust]
-version = "0.9.5"
+version = "0.9.6"
 
 [workspace.dependencies.hex]
 version = "0.4.3"
@@ -374,16 +374,16 @@ version = "1.3.1"
 version = "2.3.0"
 
 [workspace.dependencies.iana-time-zone]
-version = "0.1.61"
+version = "0.1.64"
 
 [workspace.dependencies.ignore]
-version = "0.4.23"
+version = "0.4.24"
 
 [workspace.dependencies.include_dir]
 version = "0.7.4"
 
 [workspace.dependencies.indexmap]
-version = "2.11.3"
+version = "2.12.0"
 
 [workspace.dependencies.indicatif]
 version = "0.18.0"
@@ -393,13 +393,14 @@ features = ["default", "improved_unicode"]
 version = "0.14.0"
 
 [workspace.dependencies.jsonwebtoken]
-version = "9.3.1"
+version = "10.1.0"
+features = ["aws_lc_rs"]
 
 [workspace.dependencies.linemux]
 version = "0.3.0"
 
 [workspace.dependencies.libc]
-version = "0.2.175"
+version = "0.2.177"
 
 [workspace.dependencies.netstat2]
 version = "0.11.2"
@@ -416,21 +417,21 @@ features = ["serialize"]
 version = "0.4"
 
 [workspace.dependencies.object_store]
-version = "0.12.3"
+version = "0.12.4"
 features = ["aws", "azure", "gcp", "http"]
 
 [workspace.dependencies.once_cell]
 version = "1.21.3"
 
 [workspace.dependencies.openssl]
-version = "0.10.73"
+version = "0.10.74"
 features = ["vendored"]
 
 [workspace.dependencies.opentelemetry_sdk]
-version = "0.30.0"
+version = "0.31.0"
 
 [workspace.dependencies.opentelemetry-stdout]
-version = "0.30.0"
+version = "0.31.0"
 
 [workspace.dependencies.paste]
 version = "1.0.15"
@@ -439,7 +440,7 @@ version = "1.0.15"
 version = "0.2.1"
 
 [workspace.dependencies.petgraph]
-version = "0.8.2"
+version = "0.8.3"
 features = ["serde", "serde_derive"]
 
 [workspace.dependencies.pico-args]
@@ -463,19 +464,19 @@ version = "0.9.2"
 version = "0.29.0"
 
 [workspace.dependencies.regex]
-version = "1.11.2"
+version = "1.12.2"
 
 [workspace.dependencies.reqwest]
-version = "0.12.23"
+version = "0.12.24"
 
 [workspace.dependencies.ring]
 version = "0.17.14"
 
 [workspace.dependencies.rustls]
-version = "0.23.31"
+version = "0.23.33"
 
 [workspace.dependencies.rust-embed]
-version = "8.7.2"
+version = "8.8.0"
 
 [workspace.dependencies.semver]
 version = "1.0.27"
@@ -484,14 +485,14 @@ version = "1.0.27"
 version = "0.10.9"
 
 [workspace.dependencies.serde]
-version = "1.0.225"
+version = "1.0.228"
 features = ["derive"]
 
 [workspace.dependencies.serde_json]
 version = "1.0.145"
 
 [workspace.dependencies.serde_valid]
-version = "1.0.5"
+version = "2.0.0"
 
 [workspace.dependencies.serde_yaml]
 version = "0.9.34"
@@ -510,13 +511,13 @@ version = "3.0.2"
 version = "1.0.2"
 
 [workspace.dependencies.sysinfo]
-version = "0.37.0"
+version = "0.37.2"
 
 [workspace.dependencies.temp-env]
 version = "0.3.6"
 
 [workspace.dependencies.tempfile]
-version = "3.22.0"
+version = "3.23.0"
 
 [workspace.dependencies.testdir]
 version = "0.9.3"
@@ -528,17 +529,17 @@ version = "0.16.2"
 version = "0.4.3"
 
 [workspace.dependencies.thiserror]
-version = "2.0.16"
+version = "2.0.17"
 
 [workspace.dependencies.tokio]
-version = "1.47.1"
+version = "1.48.0"
 features = ["full"]
 
 [workspace.dependencies.tokio-util]
 version = "0.7.16"
 
 [workspace.dependencies.toml]
-version = "0.9.6"
+version = "0.9.8"
 
 [workspace.dependencies.tower]
 version = "0.5.2"
@@ -590,7 +591,7 @@ version = "1.18.1"
 features = ["v7"]
 
 [workspace.dependencies.vergen-gix]
-version = "1.0.2"
+version = "1.0.9"
 features = ["build", "cargo", "rustc", "si"]
 
 [workspace.dependencies.walkdir]
@@ -602,14 +603,12 @@ version = "1.6.1"
 [workspace.dependencies.wildmatch]
 version = "2.5.0"
 
-# Update with care. There are some yanked versions after this, and 0.61.3, latesy
-# when writing this (2025.06.19) breaks the code.
 [workspace.dependencies.windows]
-version = "0.62.1"
+version = "0.62.2"
 features = ["Win32", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security", "Win32_System_Threading"]
 
 [workspace.dependencies.windows-sys]
-version = "0.61.1"
+version = "0.61.2"
 features = ["Win32", "Win32_System_Threading", "Win32_System_Console"]
 
 [build-dependencies]
