--- a/Cargo.toml
+++ b/Cargo.toml
@@ -616,6 +616,7 @@ features = ["Win32", "Win32_System_Threading", "Win32_System_Console"]
 # Internal dependencies
 
 td-build = { workspace = true }
+tm-workspace = { workspace = true }
 
 # External dependencies
 
