[TD-934] Normalize secrets in all Cross.toml files (#823)
[TD-934] Normalize secrets in all Cross.toml files

Normalize root Cross.toml

[TD-934]: https://tabsdata.atlassian.net/browse/TD-934?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/Cross.toml
+++ b/Cross.toml
@@ -10,7 +10,7 @@ pre-build = [
 ]
 
 [target.x86_64-unknown-linux-musl.env]
-volumes = ["TABSDATA_SOLUTION_HOME=/tdshome:rw"]
+volumes = ["TABSDATA_SOLUTION_HOME=/tdshome"]
 passthrough = [
     # >>> passthrough:MOUNS:BEGIN >>>
     "TABSDATA_SOLUTION_HOME=/tdshome",
