--- a/expansions/polars/Cross.toml
+++ b/expansions/polars/Cross.toml
@@ -6,18 +6,7 @@
 
 [target.x86_64-unknown-linux-musl]
 pre-build = [
-    "echo Showing cross docker container context for polars...",
-    "echo _____ import TD_CROSS_BUILD",
-    "echo ${TD_CROSS_BUILD}",
-    "echo _____",
-    "export TD_CROSS_BUILD=true",
-    "echo _____ export TD_CROSS_BUILD",
-    "echo ${TD_CROSS_BUILD}",
-    "echo _____ pwd ",
-    "pwd",
-    "echo _____ pwd contents",
-    "ls -lah .",
-    "echo _____",
+    "echo ...",
     "echo Configuring regional settings...",
     "export DEBIAN_FRONTEND=noninteractive",
     "export TZ=Etc/UTC",
@@ -55,6 +44,102 @@ pre-build = [
 ]
 
 [target.x86_64-unknown-linux-musl.env]
+volumes = ["TABSDATA_SOLUTION_HOME=/tdshome"]
 passthrough = [
+    # >>> passthrough:MOUNS:BEGIN >>>
+    "TABSDATA_SOLUTION_HOME=/tdshome",
+    # >>> passthrough:MOUNS:END >>>
     "TD_CROSS_BUILD=true",
+    # >>> passthrough:MAKE:BEGIN >>>
+    "TD_ON_GA",
+    "CARGO_TERM_COLOR",
+    "RUST_BACKTRACE",
+    "RUST_LOG",
+    "RUSTDOC_LOG",
+    "RUST_TEST_THREADS",
+    "TD_CLI_SHOW",
+    "TD_SHOW_ENV",
+    "LOG_CRATE_TM_WORKSPACE",
+    "TD_DISABLE_OPENAPI_DOCS_ENDPOINT",
+    "REQUIRE_SERVER_BINARIES",
+    "REQUIRE_THIRD_PARTY",
+    "REQUIRE_PYDOC_CSV",
+    "TD_IGNORE_CONNECTOR_REQUIREMENTS",
+    "TD_SKIP_NON_EXISTING_ASSETS",
+    "PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES",
+    # <<< passthrough:MAKE:END <<<
+    # >>> passthrough:PLATFORM:BEGIN >>>
+    "TDX_OS",
+    "TDX_ARCHITECTURE",
+    "TDX_PLATFORM",
+    "RUST_CHANNEL",
+    "RUST_TARGET",
+    "RUST_TOOLCHAIN",
+    "TD_CHANNEL",
+    "TD_TARGET",
+    "TD_TOOLCHAIN",
+    "TD_CROSS",
+    "RUST_PROFILE",
+    "PYTHON_VERSION",
+    "NODE_VERSION",
+    "MARKERS",
+    "PYTEST_MAXIMUM_RETRY_COUNT",
+    "PYTHONIOENCODING",
+    "NODE_VERSION",
+    "TD_UI_MODE",
+    "TABSDATA_VERSION",
+    # <<< passthrough:PLATFORM:END <<<
+    # >>> passthrough:SECRETS:BEGIN >>>
+    "S30__S3_ACCESS_KEY",
+    "S30__S3_SECRET_KEY",
+    "S30__S3_REGION",
+    "S30__S3_URI",
+    "S31__S3_ACCESS_KEY",
+    "S31__S3_SECRET_KEY",
+    "S31__S3_REGION",
+    "S31__S3_URI",
+    "COPY_AWS_AWS_ACCESS_KEY_ID",
+    "COPY_AWS_AWS_REGION",
+    "COPY_AWS_AWS_SECRET_ACCESS_KEY",
+    "COPY_AWS_BASE_URL",
+    "IMPORT_AWS_ACCESS_KEY",
+    "IMPORT_AWS_REGION",
+    "IMPORT_AWS_SECRET_KEY",
+    "IMPORT_AWS_BASE_URL",
+    "TRANSPORTER_AWS_ACCESS_KEY_ID",
+    "TRANSPORTER_AWS_REGION",
+    "TRANSPORTER_AWS_SECRET_ACCESS_KEY",
+    "TRANSPORTER_AWS_URI",
+    "AZ0__AZ_ACCOUNT_KEY",
+    "AZ0__AZ_ACCOUNT_NAME",
+    "AZ0__AZ_URI",
+    "COPY_AZURE_ACCOUNT_KEY",
+    "COPY_AZURE_ACCOUNT_NAME",
+    "COPY_AZURE_BASE_URL",
+    "IMPORT_AZURE_ACCOUNT_KEY",
+    "IMPORT_AZURE_ACCOUNT_NAME",
+    "IMPORT_AZURE_BASE_URL",
+    "TRANSPORTER_AZURE_ACCOUNT_KEY",
+    "TRANSPORTER_AZURE_ACCOUNT_NAME",
+    "GCP0__GCP_SERVICE_ACCOUNT_KEY",
+    "GCP0__GCP_STORAGE_URI",
+    "DBX0__CATALOG",
+    "DBX0__HOST",
+    "DBX0__SCHEMA",
+    "DBX0__TOKEN",
+    "DBX0__VOLUME",
+    "DBX0__WAREHOUSE_NAME",
+    "SF0__INSTANCE_URL",
+    "SF0__PASSWORD",
+    "SF0__SECURITY_TOKEN",
+    "SF0__USERNAME",
+    "SNW__ACCOUNT",
+    "SNW__DATABASE",
+    "SNW__PAT",
+    "SNW__ROLE",
+    "SNW__SCHEMA",
+    "SNW__USER",
+    "SNW__WAREHOUSE",
+    "OPENAI_API_KEY",
+    # <<< passthrough:SECRETS:END <<<
 ]
