--- a/macros/Cross.toml
+++ b/macros/Cross.toml
@@ -6,22 +6,15 @@
 
 [target.x86_64-unknown-linux-musl]
 pre-build = [
-    "echo Showing cross docker container context for macros...",
-    "echo _____ import TD_CROSS_BUILD",
-    "echo ${TD_CROSS_BUILD}",
-    "echo _____",
-    "export TD_CROSS_BUILD=true",
-    "echo _____ export TD_CROSS_BUILD",
-    "echo ${TD_CROSS_BUILD}",
-    "echo _____ pwd ",
-    "pwd",
-    "echo _____ pwd contents",
-    "ls -lah .",
-    "echo _____",
+    "echo ...",
 ]
 
 [target.x86_64-unknown-linux-musl.env]
+volumes = ["TABSDATA_SOLUTION_HOME=/tdshome"]
 passthrough = [
+    # >>> passthrough:MOUNS:BEGIN >>>
+    "TABSDATA_SOLUTION_HOME=/tdshome",
+    # >>> passthrough:MOUNS:END >>>
     "TD_CROSS_BUILD=true",
     # >>> passthrough:MAKE:BEGIN >>>
     "TD_ON_GA",
@@ -67,6 +60,10 @@ passthrough = [
     "S30__S3_SECRET_KEY",
     "S30__S3_REGION",
     "S30__S3_URI",
+    "S31__S3_ACCESS_KEY",
+    "S31__S3_SECRET_KEY",
+    "S31__S3_REGION",
+    "S31__S3_URI",
     "COPY_AWS_AWS_ACCESS_KEY_ID",
     "COPY_AWS_AWS_REGION",
     "COPY_AWS_AWS_SECRET_ACCESS_KEY",
@@ -92,13 +89,12 @@ passthrough = [
     "TRANSPORTER_AZURE_ACCOUNT_NAME",
     "GCP0__GCP_SERVICE_ACCOUNT_KEY",
     "GCP0__GCP_STORAGE_URI",
-    "TD_DATABRICKS_CATALOG",
-    "TD_DATABRICKS_HOST",
-    "TD_DATABRICKS_SCHEMA",
-    "TD_DATABRICKS_TOKEN",
-    "TD_DATABRICKS_VOLUME",
-    "TD_DATABRICKS_WAREHOUSE_NAME",
-    "TD_DATABRICKS_WAREHOUSE_ID",
+    "DBX0__CATALOG",
+    "DBX0__HOST",
+    "DBX0__SCHEMA",
+    "DBX0__TOKEN",
+    "DBX0__VOLUME",
+    "DBX0__WAREHOUSE_NAME",
     "SF0__INSTANCE_URL",
     "SF0__PASSWORD",
     "SF0__SECURITY_TOKEN",
@@ -110,5 +106,6 @@ passthrough = [
     "SNW__SCHEMA",
     "SNW__USER",
     "SNW__WAREHOUSE",
+    "OPENAI_API_KEY",
     # <<< passthrough:SECRETS:END <<<
 ]
