--- a/expansions/polars/Cross.toml
+++ b/expansions/polars/Cross.toml
@@ -44,7 +44,7 @@ pre-build = [
 ]
 
 [target.x86_64-unknown-linux-musl.env]
-volumes = ["TABSDATA_SOLUTION_HOME=${HOST_TABSDATA_SOLUTION_HOME}:/tdshome"]
+volumes = ["TABSDATA_SOLUTION_HOME"]
 passthrough = [
     # >>> passthrough:MOUNS:BEGIN >>>
     "TABSDATA_SOLUTION_HOME",
