[TD-942] Move workspace root resolution to td-common (#829)

--- a/server/libraries/td-common/Cargo.toml
+++ b/server/libraries/td-common/Cargo.toml
@@ -39,6 +39,7 @@ ignored = ["openssl", "td-build", "toml"]
 # Internal dependencies
 
 td-build = { workspace = true }
+tm-workspace = { workspace = true }
 
 # External dependencies
 
