[TD-919] New tdserver subcommand to list all supervisor instances (#813)
[TD-919] New tdserver subcommand to list all supervisor instances

Update locked dependencies

[TD-919]: https://tabsdata.atlassian.net/browse/TD-919?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

--- a/server/libraries/td-supervisor/Cargo.toml
+++ b/server/libraries/td-supervisor/Cargo.toml
@@ -87,6 +87,7 @@ ignore = { workspace = true }
 include_dir = { workspace = true }
 indexmap = { workspace = true }
 linemux = { workspace = true }
+netstat2 = { workspace = true }
 num-format = { workspace = true }
 path-slash = { workspace = true }
 regex = { workspace = true }
