--- a/devutils/automation/tasks/cargo/td-build/Cargo.toml
+++ b/devutils/automation/tasks/cargo/td-build/Cargo.toml
@@ -44,6 +44,7 @@ hostname = { workspace = true }
 iana-time-zone = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_yaml = { workspace = true }
+sysinfo = { workspace = true }
 toml = { workspace = true }
 vergen-gix = { workspace = true, features = ["build", "cargo", "emit_and_set", "rustc", "si"] }
 
