--- a/requirements/requirements-third-party.txt
+++ b/requirements/requirements-third-party.txt
@@ -3,6 +3,7 @@
 #
 
 accessify==0.3.1
+archspec==0.2.5
 base32hex==1.0.2
 click==8.3.0
 cloudpickle==3.1.1
@@ -23,8 +24,8 @@ pip-tools==7.5.0
 platformdirs==4.5.0
 polars==1.34.0
 PyYAML==6.0.3
-ruamel.yaml==0.18.15
 pyarrow==21.0.0
+py-cpuinfo==9.0.0
 # Note: pinning pydantic and pyiceberg to specific versions due to a regression in
 # their code, upgrade to latest once solved.
 # See: https://github.com/apache/iceberg-python/issues/2590
@@ -38,8 +39,10 @@ requests==2.32.5
 # rich==14.1.0
 rich<14.0.0
 rich-click==1.9.3
+ruamel.yaml==0.18.15
 sqlalchemy==2.0.44
 typing_extensions==4.15.0
+tzlocal==5.3.1
 uuid6==2025.0.1
 uuid-v7==1.0.0
 uv==0.9.4
