[TD-946] New extension td-variant for minor extension features (#832)

--- a/.cargo/deny.toml
+++ b/.cargo/deny.toml
@@ -23,7 +23,9 @@ deny = [{ crate = "log", reason = "We use 'tracing' crate instead, which has equ
     "jsonpath_lib_polars_vendor",
     "mio",
     "native-tls",
+    "netlink-sys",
     "opentelemetry-appender-log",
+    "prodash",
     "pyo3-stub-gen",
     "reqwest",
     "rustls",
