--- a/expansions/polars/modules/ty-tableframe/pyproject.toml
+++ b/expansions/polars/modules/ty-tableframe/pyproject.toml
@@ -4,12 +4,15 @@
 
 [build-system]
 requires = [
-    "setuptools==78.1.1",
-    "psutil==7.1.0",
-    "tqdm==4.67.1",
+    "archspec==0.2.5",
     "colorama==0.4.6",
     "maturin>=1.0,<2.0",
-    "polars>=1.32.3"]
+    "polars>=1.34.0",
+    "psutil==7.1.0",
+    "py-cpuinfo==9.0.0",
+    "setuptools==78.1.1",
+    "tqdm==4.67.1",
+    "tzlocal==5.3.1"]
 build-backend = "maturin"
 
 [tool.flake8]
@@ -62,6 +65,7 @@ known_first_party = [
     "ta_tableframe",
     "te_examples",
     "te_tableframe",
+    "te_variant",
     "ty_tableframe",
     "tests_tabsdata",
     "tests_tabsdata_agent",
@@ -75,6 +79,7 @@ known_first_party = [
     "tests_ta_tableframe",
     "tests_te_examples",
     "tests_te_tableframe",
+    "tests_te_variant",
     "tests_ty_tableframe",
 ]
 known_third_party = ["docker"]
