--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,7 +82,7 @@ path = "auto.rs"
 # This feature enables the generation of API documentation for the server.
 api-docs = []
 
-# This feature enbles enterprise functionalities not available in the standard implementation.
+# This feature enbles enterprise functionalities not available in the open source implementation.
 # It should be normally used only for cross-crates tests.
 enterprise = []
 
@@ -356,7 +356,7 @@ version = "0.3.31"
 version = "0.1.6"
 
 [workspace.dependencies.gix]
-version = "0.68.0"
+version = "0.74.1"
 
 [workspace.dependencies.glob]
 version = "0.3.3"
@@ -371,7 +371,7 @@ version = "0.4.3"
 version = "0.3.6"
 
 [workspace.dependencies.hostname]
-version = "0.4.0"
+version = "0.4.1"
 
 [workspace.dependencies.http]
 version = "1.3.1"
@@ -392,7 +392,7 @@ version = "0.7.4"
 version = "2.12.0"
 
 [workspace.dependencies.indicatif]
-version = "0.18.0"
+version = "0.18.1"
 features = ["default", "improved_unicode"]
 
 [workspace.dependencies.itertools]
@@ -479,7 +479,7 @@ version = "0.12.24"
 version = "0.17.14"
 
 [workspace.dependencies.rustls]
-version = "0.23.33"
+version = "0.23.34"
 
 [workspace.dependencies.rust-embed]
 version = "8.8.0"
