--- a/requirements/requirements-dev-third-party.txt
+++ b/requirements/requirements-dev-third-party.txt
@@ -51,6 +51,7 @@ pytest-timeout==2.4.0
 pytest-xdist==3.8.0
 pytest==8.4.2
 python-dateutil==2.9.0.post0
+questionary==2.1.1
 setuptools==78.1.1
 supervisor==4.2.5
 tabulate==0.9.0
