[TD-951] Use tabsdata fork of cargo-pants in cargo make (#837)

--- a/make/make-os/fragments/tasks/permit_rs.toml
+++ b/make/make-os/fragments/tasks/permit_rs.toml
@@ -68,5 +68,7 @@ script = [
 
         exec --fail-on-error rustup component add %{components}
         exec --fail-on-error cargo install --quiet --jobs 8 %{crates}
+
+        exec --fail-on-error cargo install --quiet --git https://github.com/tabsdata/cargo-pants --branch main
     end
     ''']
