[TD-952] Alias setup for task permit (#838)

--- a/make/make-os/fragments/aliases/common.toml
+++ b/make/make-os/fragments/aliases/common.toml
@@ -17,3 +17,7 @@ alias = "book_dguide"
 [tasks.docs]
 plugin = "td-task-tracker"
 alias = "book_dguide"
+
+[tasks.setup]
+plugin = "td-task-tracker"
+alias = "permit"
