--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ requires = [
     "colorama==0.4.6",
     "psutil==7.1.0",
     "py-cpuinfo==9.0.0",
+    "PyYAML==6.0.3",
     "setuptools==78.1.1",
     "tqdm==4.67.1",
     "tzlocal==5.3.1"]
