[TD-974] Remove Rust examples and unnecessary build logging (#859)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -138,7 +138,7 @@ panic = "abort"
 strip = "debuginfo"
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "toml"]
+ignored = ["openssl", "toml",  "te-tableframe"]
 
 # Internal dependencies
 
