--- a/Cross.toml
+++ b/Cross.toml
@@ -26,6 +26,7 @@ passthrough = [
     "TD_CLI_SHOW",
     "TD_SHOW_ENV",
     "LOG_CRATE_TM_WORKSPACE",
+    "LOG_CRATE_TD_BUILD",
     "TD_DISABLE_OPENAPI_DOCS_ENDPOINT",
     "REQUIRE_SERVER_BINARIES",
     "REQUIRE_THIRD_PARTY",
