--- a/server/binaries/td-server/Cargo.toml
+++ b/server/binaries/td-server/Cargo.toml
@@ -41,38 +41,6 @@ path = "src/apiserver.rs"
 name = "transporter"
 path = "src/transporter.rs"
 
-[[example]]
-name = "apisimple"
-path = "examples/server/apisimple.rs"
-
-[[example]]
-name = "tableframe"
-path = "examples/tableframe/extension.rs"
-
-[[example]]
-name = "log2file"
-path = "examples/telemetry/log2file.rs"
-
-[[example]]
-name = "log2stdout"
-path = "examples/telemetry/log2stdout.rs"
-
-[[example]]
-name = "log4span"
-path = "examples/telemetry/log4span.rs"
-
-[[example]]
-name = "helloworold"
-path = "examples/hello/helloworld.rs"
-
-[[example]]
-name = "hal"
-path = "examples/dummy/hal.rs"
-
-[[example]]
-name = "tars"
-path = "examples/dummy/tars.rs"
-
 [features]
 api-docs = []
 enterprise = []
@@ -85,7 +53,7 @@ test_tower_metadata = ["td-tower/test_tower_metadata"]
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "paste", "toml", "utoipa", "utoipa-axum", "windows"]
+ignored = ["openssl", "paste", "toml", "utoipa", "utoipa-axum", "td-tower", "windows"]
 
 # Build dependencies
 
@@ -94,10 +62,6 @@ ignored = ["openssl", "paste", "toml", "utoipa", "utoipa-axum", "windows"]
 # Internal dependencies
 
 td-build = { workspace = true }
-
-# External dependencies
-
-toml = { workspace = true }
 
 [dependencies]
 
@@ -111,13 +75,9 @@ tm-workspace = { workspace = true }
 
 ## Libraries
 
-ta-apiserver = { workspace = true }
-td-apiforge = { workspace = true }
 td-apiserver = { workspace = true }
 td-common = { workspace = true }
 td-database = { workspace = true }
-te-tableframe = { workspace = true }
-ta-tableframe = { workspace = true }
 td-objects = { workspace = true }
 td-process = { workspace = true }
 td-services = { workspace = true }
@@ -130,21 +90,10 @@ td-tower = { workspace = true }
 
 # External dependencies
 
-axum = { workspace = true, features = ["macros"] }
 clap = { workspace = true, features = ["derive"] }
-clap_derive = { workspace = true }
-getset = { workspace = true }
-paste = { workspace = true }
 path-slash = { workspace = true }
-reqwest = { workspace = true }
-serde = { workspace = true, features = ["derive"] }
-thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
-tower = { workspace = true, features = ["buffer", "limit", "make", "timeout", "util"] }
 tracing = { workspace = true }
-tracing-futures = { workspace = true }
-utoipa = { workspace = true, features = ["axum_extras", "preserve_order", "uuid"] }
-utoipa-axum = { workspace = true }
 
 [dev-dependencies]
 td-common = { workspace = true, features = ["td-test"] }
