--- a/server/libraries/td-tower/Cargo.toml
+++ b/server/libraries/td-tower/Cargo.toml
@@ -28,7 +28,7 @@ test_tower_metadata = []
 test-utils = []
 
 [package.metadata.cargo-machete]
-ignored = ["openssl", "serde_json", "td-build", "strum", "toml"]
+ignored = ["openssl", "td-build", "strum", "thiserror", "toml"]
 
 # Build dependencies
 
@@ -55,11 +55,9 @@ td-error = { workspace = true }
 
 async-trait = { workspace = true }
 derive_builder = { workspace = true }
-futures = { workspace = true }
 futures-util = { workspace = true }
 getset = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
 sqlx = { workspace = true }
 strum = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
